--- a/src/assets/banner.css
+++ b/src/assets/banner.css
@@ -59,3 +59,32 @@ td.banner-preview img {
 .nav-tabs-banner {
     margin: 0 0 20px 0;
 }
+
+
+.banner-image img {
+    width: 100%;
+}
+
+.banner-video video {
+    width: 100%;
+}
+
+@media (max-width: 992px) {
+    .banner-mobile {
+        display: block;
+    }
+
+    .banner-desktop {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .banner-mobile {
+        display: none;
+    }
+
+    .banner-desktop {
+        display: block;
+    }
+}
